Knife create a hole in the face cutted. #48683

Closed
opened 2016-06-19 20:11:38 +02:00 by rm beer · 11 comments

Version: 2.77a abf6f08

Have a bug for any faces of any mesh, i unknown where or when appear the hole. This hole appear or not appear if change the amount of cut.Captura de pantalla_2016-06-19_14-54-50zz.png

knife_cut_hole.blend

Version: 2.77a abf6f08 Have a bug for any faces of any mesh, i unknown where or when appear the hole. This hole appear or not appear if change the amount of cut.![Captura de pantalla_2016-06-19_14-54-50zz.png](https://archive.blender.org/developer/F317704/Captura_de_pantalla_2016-06-19_14-54-50zz.png) [knife_cut_hole.blend](https://archive.blender.org/developer/F317781/knife_cut_hole.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @KillerWasp

Added subscriber: @KillerWasp

Added subscriber: @SpectreFirst

Added subscriber: @SpectreFirst

System Information
Intel Core i7, 8 Gb RAM, AMD Radeon HD 7700
Windows 7 x64

Blender Version
Broken: 2.77 2e553f7 and 2.77a abf6f08
Worked: 2.76b f337fea

Short description of error

  • It happens on Plane and UV Sphere primitives.
  • I wasn't able to reproduce it on Torus.
  • It happens randomly on Cube (I was able to reproduce this on Cube's vertical sides).
  • Happens on some polygons of Suzanne.
  • Seems to happen on quads.
  • I have tried to export Plane and UV Sphere primitives into .OBJ, re-import them and make a cut and there were no holes.
  • Exporting and re-importing from .FBX and cutting does produce a hole.
  • 2.76b doesn't seem to have this problem.

Exact steps for others to reproduce the error
Start Blender, create a simple Plane or UV Sphere primitive, enter Edit Mode, select Knife tool, make a cut just like on provided picture and hit Enter to finish the cut.

  • In 2.76b you will have a diamond cut as expected.
  • In 2.77 you will have a diamond cut as well, but with a hole in one of the corners.

This case is very confusing to me because I don't see a clear pattern here, but I hope that my tests will help you with further investigation.

**System Information** Intel Core i7, 8 Gb RAM, AMD Radeon HD 7700 Windows 7 x64 **Blender Version** Broken: 2.77 2e553f7 and 2.77a abf6f08 Worked: 2.76b f337fea **Short description of error** - It happens on Plane and UV Sphere primitives. - I wasn't able to reproduce it on Torus. - It happens randomly on Cube (I was able to reproduce this on Cube's vertical sides). - Happens on some polygons of Suzanne. - Seems to happen on quads. - I have tried to export Plane and UV Sphere primitives into .OBJ, re-import them and make a cut and there were no holes. - Exporting and re-importing from .FBX and cutting does produce a hole. - 2.76b doesn't seem to have this problem. **Exact steps for others to reproduce the error** Start Blender, create a simple Plane or UV Sphere primitive, enter Edit Mode, select Knife tool, make a cut just like on provided picture and hit Enter to finish the cut. - In 2.76b you will have a diamond cut as expected. - In 2.77 you will have a diamond cut as well, but with a hole in one of the corners. This case is very confusing to me because I don't see a clear pattern here, but I hope that my tests will help you with further investigation.
Campbell Barton self-assigned this 2016-06-20 13:54:25 +02:00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by a170607578

This issue was referenced by a170607578b8911df30039dacf7399506476be87

I don't know if I'm just unlucky, but it looks like there is still a problem with knife tool in build 6fbe6eb0:
Create a default UV Sphere and try to cut some polygons in a way like on provided picture. As a result you will have one of the corners with inverted normal. There was a hole there, it is gone now, but now there is an inverted polygon on its place. Don't know if that will help with anything, but I thought I should bring this to your attention anyway. You can use my test file: open the file and try to cut selected polygon or any of its neighbors.
knife_cut_inverted_normal.png

knife_cut_inverted_normal.blend

I don't know if I'm just unlucky, but it looks like there is still a problem with knife tool in build 6fbe6eb0: Create a default UV Sphere and try to cut some polygons in a way like on provided picture. As a result you will have one of the corners with inverted normal. There was a hole there, it is gone now, but now there is an inverted polygon on its place. Don't know if that will help with anything, but I thought I should bring this to your attention anyway. You can use my test file: open the file and try to cut selected polygon or any of its neighbors. ![knife_cut_inverted_normal.png](https://archive.blender.org/developer/F318196/knife_cut_inverted_normal.png) [knife_cut_inverted_normal.blend](https://archive.blender.org/developer/F318198/knife_cut_inverted_normal.blend)
Author

Wait! Closed and resolved?? why?? where??
i view that more users have the same problem! :S

Wait! Closed and resolved?? why?? where?? i view that more users have the same problem! :S

@KillerWasp - if you can redo this bug, please report a new bug.

I just double checked and I can't reproduce the two errors reported here.

@KillerWasp - if you can redo this bug, please report a new bug. I just double checked and I can't reproduce the two errors reported here.

Added subscriber: @bliblubli

Added subscriber: @bliblubli

@KillerWasp couldn't reproduce either with the 2 files. Maybe get a fresh buildbot and delete your config folder?

@KillerWasp couldn't reproduce either with the 2 files. Maybe get a fresh buildbot and delete your config folder?
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48683
No description provided.